# bayesfanova_paper

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
bayesanova/: __init__.py
bayesanova.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bayesanova/anova_estimators/: cosso.py  lgbayescos.py  ss.py  utils.py
bayesanova/examples/: simulated_data.py
bayesanova/models/: likelihood.py  model.py  prior.py  sobolev_kernel.py  utils.py
bayesanova/samplers/: mcmc.py  stein.py  utils.py
examples/simulated/: generate_data.py  run_all_simulated_regression.py  run_simulated_regression.py  run_simulated_regression_opt.py
examples/uci/: download_data.py  run_all_test.py  run_all_test_opt.py  run_uci_regression.py  run_uci_regression_opt.py
examples/uci/outputs/autompg/MARS/: metrics_0.npz  metrics_1.npz  metrics_2.npz  metrics_3.npz  metrics_4.npz
examples/uci/outputs/autompg/SKIMFM/: metrics_0.npz
examples/uci/outputs/concrete/MARS/: metrics_0.npz  metrics_1.npz  metrics_2.npz  metrics_3.npz  metrics_4.npz
examples/uci/outputs/demand/MARS/: metrics_0.npz  metrics_1.npz  metrics_2.npz  metrics_3.npz  metrics_4.npz
examples/uci/outputs/energy/MARS/: metrics_0.npz  metrics_1.npz  metrics_2.npz  metrics_3.npz  metrics_4.npz
examples/uci/outputs/housing/MARS/: metrics_0.npz  metrics_1.npz  metrics_2.npz  metrics_3.npz  metrics_4.npz
examples/uci/outputs/housing/SKIMFM/: metrics_0.npz
examples/uci/outputs/pumadyn/MARS/: metrics_0.npz  metrics_1.npz  metrics_2.npz  (+2 more)
notebooks/: Demo_anova_estimators.ipynb  Test_stein_sampling.ipynb
(+1595 files in other folders)
