[metadata]
name = bayesanova
version = 0.0.1
author = anonyomous
author_email = anonyomous
description = GP regression with FANOVA decomposition
keywords = Sobolev, ANOVA, Gaussian Process, component selection, Bayesian
description_file = README.md

[options]
packages=find:
python_requires = >=3.8,
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    seaborn    
    scikit_learn
    torch
    gpytorch    
    pyro_ppl 
 


